--- a/algebra_assignment_2.tex
+++ b/algebra_assignment_2.tex
@@ -382,7 +382,7 @@
   \begin{align*}
     R/pR = \set{a+bi+cj+dk : a,b,c,d \in \Z/p\Z}
   \end{align*}
-  The maximal ideals are
+  The maximal qideals are
   \begin{align*}
     \mathfrak{m}_1 &= \text{span}_{\Z/p\Z}(1,i,j) \\
     \mathfrak{m}_2 &= \text{span}_{\Z/p\Z}(1,i,k) \\
