--- a/topology_assignment_2.tex
+++ b/topology_assignment_2.tex
@@ -114,7 +114,8 @@
 
       \begin{enumerate}
       \item
-        $f,g,h: \R \to \R$ are all continuous, so $f,g,h: \mathbb{E} \to \R$ are too. $l: \mathbb{E} \to \mathbb{R}$ is continuous, but $k: \mathbb{E} \to \mathbb{R}$ is not.
+        $f,g,h: \R \to \R$ are all continuous, so $f,g,h: \mathbb{E} \to \R$ are too. $l: \mathbb{E} \to \mathbb{R}$ is continuous,
+        but $k: \mathbb{E} \to \mathbb{R}$ is not.
       \item
         None of $f,g,h,k,l: \R \to \mathbb{E}$ are continuous.
       \item
