--- a/algebra_assignment_2.tex
+++ b/algebra_assignment_2.tex
@@ -56,7 +56,7 @@
 
 \title{ Math 5107 -- Algebra Assignment 2}
 \author{David Draguta}
-\date{2021-10-26}
+\date{2021-10-27}
 
 \begin{document}
 
@@ -363,7 +363,7 @@
     $G = D_4$:
     
     \begin{align*}
-      \R G = \R \oplus \R \oplus \R \oplus \R \oplus \R^{2\times2}
+      \R G = \R \oplus \R \oplus \R \oplus \R \oplus \C \oplus \C 
     \end{align*}
     
   \end{enumerate}
@@ -406,7 +406,15 @@
     \begin{cases}
       \set{0} & \text{ if } p \neq 2 \\
       \set{0,1+i+j+k}  & \text{ if } p = 2
-    \end{cases}
+    \end{cases},
+  \end{align*}
+  and
+  \begin{align*}
+    R_p/J(R_p) =
+    \begin{cases}
+      \Z \oplus \Z i \oplus \Z j        & \text{ if } p = 2 \\
+      \Z \oplus \Z i \oplus \Z j \oplus \Z k & \text { if } p \neq 2
+    \end{cases}.
   \end{align*}
 \end{proof}
 \begin{exercise}
